= New Features =

== 1.18 release (in progress) == #release-1.18

=== Library ===

==== Major changes ====

==== New classes ====

==== API changes ====
 * Removed deprecated MultiStart::setStartingPoints/getStartingPoints
 * Removed deprecated KarhunenLoeveResult::getEigenValues
 * Removed deprecated coupling_tools.execute is_shell/workdir/shell_exe/check_exit_code arguments
 * RandomVector::get/setParameter and getParameterDescription available to PythonRandomVector
 * Implemented CovarianceModel::computeCrossCovariance
 * Deprecated Hanning in favor of Hann
 * Deprecated AdaptiveDirectionalSampling in favor of AdaptiveDirectionalStratification
 * Deprecated VisualTest::DrawCobWeb in favor of DrawParallelCoordinates
 * IndicatorFunction constructor takes a Domain as input

=== Documentation ===

=== Python module ===

=== Miscellaneous ===

=== Bug fixes ===
 * #1842 (libOT.so.0.0.0 doesn't have a SONAME)
 * #1843 (Ali-Mikhail-Haq copula parameter value)
 * #1844 (MaximumDistribution::computePDF is wrong when all the marginals are equal and independent)
 * #1845 (MemoizeFunction does not propagate to finite difference gradient&hessian)
 * #1847 (ParametricFunction require unnecessary function evaluations)
 * #1854 (Sample indexing does not work on np.int64 type)
 * #1856 (Speed up Normal computeSurvivalFunction)
 * #1857 (ProductCovarianceModel fails when constructed with DiracCovarianceModel)
 * #1858 (Normal::computeCDF(sample) crash for large dimensions)
 * #1861 (Still some instabilities in Kriging with ot.StationaryFunctionalCovarianceModel)
 * #1864 (FORM - IMPORTANCE FACTOR)
 * #1870 (TruncatedDistribution fails to compute quantiles)
 * #1874 (ProcessSample.getSampleAtVertex() may be useful as a public method)
 * #1877 (How to model singular multivariate distributions?)
 * #1878 (Rename Hanning filtering window)
 * #1879 (Adaptive Directional Sampling Algorithm: the drawProbabilityConvergence graph may be wrong)