@@ -27,6 +27,8 @@ ot_add_source_file (ComposedHessian.cxx)
 ot_add_source_file (ConstantBasisFactory.cxx)
 ot_add_source_file (DatabaseFunction.cxx)
 ot_add_source_file (DatabaseEvaluation.cxx)
+ot_add_source_file (DistanceToDomainEvaluation.cxx)
+ot_add_source_file (DistanceToDomainFunction.cxx)
 ot_add_source_file (DualLinearCombinationEvaluation.cxx)
 ot_add_source_file (DualLinearCombinationFunction.cxx)
 ot_add_source_file (DualLinearCombinationGradient.cxx)
@@ -171,6 +173,7 @@ ot_install_header_file (NoGradient.hxx)
 ot_install_header_file (ProductEvaluation.hxx)
 ot_install_header_file (NoHessian.hxx)
 ot_install_header_file (IndicatorEvaluation.hxx)
+ot_install_header_file (DistanceToDomainEvaluation.hxx)
 ot_install_header_file (MethodBoundEvaluation.hxx)
 ot_install_header_file (ComposedHessian.hxx)
 ot_install_header_file (OTFunc.hxx)
@@ -187,6 +190,7 @@ ot_install_header_file (TranslationFunction.hxx)
 ot_install_header_file (LinearFunction.hxx)
 ot_install_header_file (IdentityFunction.hxx)
 ot_install_header_file (IndicatorFunction.hxx)
+ot_install_header_file (DistanceToDomainFunction.hxx)
 ot_install_header_file (QuadraticFunction.hxx)
 ot_install_header_file (UniVariatePolynomial.hxx)
 ot_install_header_file (UniVariatePolynomialImplementation.hxx)
