@@ -71,6 +71,7 @@
 #include "openturns/NormInfEnumerateFunction.hxx"
 #include "openturns/ExpertMixture.hxx"
 #include "openturns/IndicatorEvaluation.hxx"
+#include "openturns/DistanceToDomainEvaluation.hxx"
 #include "openturns/LARS.hxx"
 #include "openturns/LinearCombinationEvaluation.hxx"
 #include "openturns/LinearCombinationGradient.hxx"
@@ -82,6 +83,7 @@
 #include "openturns/TranslationEvaluation.hxx"
 #include "openturns/TranslationFunction.hxx"
 #include "openturns/IndicatorFunction.hxx"
+#include "openturns/DistanceToDomainFunction.hxx"
 #include "openturns/QuadraticFunction.hxx"
 #include "openturns/LinearGradient.hxx"
 #include "openturns/MethodBoundEvaluation.hxx"
