@@ -161,6 +161,7 @@ ot_check_test (LinearGradient_std)
 ot_check_test (ConstantHessian_std)
 ot_check_test (MethodBoundEvaluation_std)
 ot_check_test (IndicatorFunction_std IGNOREOUT)
+ot_check_test (DistanceToDomainFunction_std IGNOREOUT)
 ot_check_test (AggregatedFunction_std)
 ot_check_test (DualLinearCombinationFunction_std)
 ot_check_test (LinearCombinationFunction_std)
