@@ -156,6 +156,7 @@ ot_pyinstallcheck_test (LinearGradient_std)
 ot_pyinstallcheck_test (AggregatedFunction_std)
 ot_pyinstallcheck_test (DualLinearCombinationFunction_std)
 ot_pyinstallcheck_test (IndicatorFunction_std IGNOREOUT)
+ot_pyinstallcheck_test (DistanceToDomainFunction_std IGNOREOUT)
 ot_pyinstallcheck_test (LinearCombinationFunction_std)
 ot_pyinstallcheck_test (ConstantGradient_std)
 ot_pyinstallcheck_test (ConstantHessian_std)
