@@ -7,6 +7,7 @@
 ==== Major changes ====
 
 ==== New classes ====
+ * DistanceToDomainFunction
 
 ==== API changes ====
  * Removed deprecated MultiStart::setStartingPoints/getStartingPoints
@@ -18,6 +19,7 @@
  * Deprecated AdaptiveDirectionalSampling in favor of AdaptiveDirectionalStratification
  * Deprecated VisualTest::DrawCobWeb in favor of DrawParallelCoordinates
  * IndicatorFunction constructor takes a Domain as input
+ * Intervals and DomainUnions get new method computeDistanceToDomain(Point or Sample)
 
 === Documentation ===
 
